[package]
name = "chat-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures = "0.3"
ratatui = "0.20.1"
crossterm = "0.27"
log = "0.4"
env_logger = "0.9"

rustls = { version = "0.23", default-features = false, features = ["ring"] }
